--- a/style.css
+++ b/style.css
@@ -38,6 +38,14 @@ label {
     height: 600px;
     width: 600px;
     border: 2px solid black;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.pixel {
+    height: 37.5px;
+    width: 37.5px;
+    box-shadow: 0px 0px 1px gray;
 }
 
 footer {
@@ -45,3 +53,4 @@ footer {
     justify-content: center;
     margin-top: auto;
 }
+
