--- a/style.css
+++ b/style.css
@@ -71,3 +71,42 @@ footer {
     margin-top: auto;
 }
 
+#colorpicker {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-color: transparent;
+    width: 100px;
+    height: 100px;
+    border: none;
+    cursor: pointer;
+}
+
+#colorpicker::-webkit-color-swatch {
+    border-radius: 50%;
+    border: 1px solid #000000;
+}
+
+#colorpicker::-moz-color-swatch {
+    border-radius: 50%;
+    border: 1px solid #000000;
+}
+
+
+.grow-on-hover {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+}
+
+.grow-on-hover:hover{
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    cursor: pointer; 
+}
