--- a/style.css
+++ b/style.css
@@ -1,30 +1,65 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: white;
+}
+
+@font-face {
+    font-family: VCR_OSD_MONO_1;
+    src: url("./VCR_OSD_MONO_1.001.ttf") format("opentype");
+}
+
 body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    background-color: #141518;
 }
 
 header {
     text-align: center;
+    background-color: #333333;
+    padding: 16px;
+}
+
+h1 {
+    font-size: 3rem;
+    font-family: VCR_OSD_MONO_1;
+    font-weight: 400;
 }
 
 main {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 45px;
+    gap: 45px;  
+    background-color: #141518;
+    margin-top: auto;
 }
 
 .tools {
     display: flex;
     flex-direction: column;
-    border: 2px solid red;
+    border: 2px solid black;
     justify-content: center;
     gap: 30px;
+    background-color: #333333;
+    padding: 0 20px;
+    border-radius: 10px;
 }
 
+.slidecontainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 label {
     align-self: center;
+    font-size: 1.5rem;
+    font-weight: 900;
+    font-family: VCR_OSD_MONO_1;
+    font-weight: 400;
 }
 
 #colorpicker {
@@ -34,6 +69,8 @@ label {
 
 #sliderOutput {
     text-align: center;
+    margin-top: 10px;
+    font-family: VCR_OSD_MONO_1;
 }
 /* 
 #eraser {
@@ -46,9 +83,9 @@ label {
 .canvas {
     height: 600px;
     width: 600px;
-    border: 2px solid black;
     display: flex;
     flex-wrap: wrap;
+    background-color: white;
 }
 
 .pixel {
@@ -65,10 +102,14 @@ label {
     background-color: rgb(43, 152, 202);
 }
 
+
 footer {
     display: flex;
     justify-content: center;
     margin-top: auto;
+    background-color: #333333;
+    padding: 16px;
+    font-family: VCR_OSD_MONO_1;
 }
 
 #colorpicker {
@@ -110,3 +151,29 @@ footer {
     transform: scale(1.1);
     cursor: pointer; 
 }
+
+.button-47 {
+    align-items: center;
+    border: 0 solid #E2E8F0;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    box-sizing: border-box;
+    color: #1A202C;
+    display: inline-flex;
+    /* font-family: Inter, sans-serif; */
+    font-family: VCR_OSD_MONO_1;
+    font-size: 1rem;
+    font-weight: 500;
+    height: 56px;
+    justify-content: center;
+    line-height: 24px;
+    overflow-wrap: break-word;
+    padding: 24px;
+    text-decoration: none;
+    width: auto;
+    border-radius: 8px;
+    cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
