--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ footer {
     margin-top: auto;
     background-color: #333333;
     padding: 16px;
+    font-size: 1.5rem;
     font-family: VCR_OSD_MONO_1;
 }
 
